[gd_scene load_steps=17 format=3 uid="uid://cr76y4515avqr"]

[ext_resource type="Script" path="res://Scripts/CameraController.gd" id="1_86gyp"]
[ext_resource type="Script" path="res://Scripts/MegaScript.gd" id="2_rrtdw"]
[ext_resource type="Script" path="res://Scripts/StageManager.gd" id="3_fhyqn"]
[ext_resource type="PackedScene" uid="uid://dn0filcsxwbxh" path="res://Models/Male/Male.tscn" id="4_1b3t3"]
[ext_resource type="Material" uid="uid://nnkjj5g163li" path="res://Materials/Wood.tres" id="5_dpdsy"]
[ext_resource type="PackedScene" uid="uid://dtbtlryx3g0o4" path="res://Models/Female/Female.tscn" id="5_eack5"]
[ext_resource type="PackedScene" uid="uid://ca4mrbofkh6yt" path="res://Models/Chair/SheenChair.glb" id="6_npf2o"]
[ext_resource type="Material" uid="uid://ctiwhuqfn08r7" path="res://Materials/Brick.tres" id="7_h7q6w"]
[ext_resource type="Material" uid="uid://bpxcp3ujpv51v" path="res://Materials/Plaster.tres" id="8_57npg"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_ml3th"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_fhqru"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ce2dc"]
height = 5.0
radius = 1.766

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sd6wv"]
sky_top_color = Color(0.627451, 0.756863, 0.960784, 1)
sky_horizon_color = Color(0.792157, 0.615686, 0.431373, 1)
sky_curve = 0.184671

[sub_resource type="Sky" id="Sky_0pcml"]
sky_material = SubResource("ProceduralSkyMaterial_sd6wv")

[sub_resource type="Environment" id="Environment_ssqph"]
background_mode = 2
sky = SubResource("Sky_0pcml")

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_owjuv"]

[node name="World" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0347781, 0.0191932, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.788087, -0.244855, 0.56477, -0.0158684, 0.909098, 0.416281, -0.61536, -0.337027, 0.712562, 1.15968, 1.47731, 1.59079)
fov = 62.0921
script = ExtResource("1_86gyp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.96123, 0.208933, 0.179956, -0.245481, 0.351109, 0.903583, 0.125604, -0.912726, 0.388786, -0.665342, 4.95486, 1.81716)
light_color = Color(0.956863, 0.635294, 0.180392, 1)
light_energy = 0.547

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BottomBar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -204.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_rrtdw")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="CanvasLayer/BottomBar"]
stream = SubResource("AudioStreamMicrophone_ml3th")
autoplay = true
bus = &"Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/BottomBar"]
autoplay = true

[node name="RecordButton" type="Button" parent="CanvasLayer/BottomBar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 383.0
offset_top = -75.0
offset_right = 458.0
grow_vertical = 0
text = "Record"

[node name="Status" type="Label" parent="CanvasLayer/BottomBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Ready"
horizontal_alignment = 2

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/BottomBar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_right = 300.0
grow_vertical = 0
placeholder_text = "Type Here"

[node name="ExecuteButton" type="Button" parent="CanvasLayer/BottomBar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 304.0
offset_top = -75.0
offset_right = 379.0
grow_vertical = 0
text = "Execute"

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer/BottomBar"]

[node name="HTTPRequest2" type="HTTPRequest" parent="CanvasLayer/BottomBar"]

[node name="Stage" type="Node3D" parent="."]
script = ExtResource("3_fhyqn")

[node name="ModelHolder" type="Node3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0346532)

[node name="Male" parent="Stage/ModelHolder" instance=ExtResource("4_1b3t3")]

[node name="Female" parent="Stage/ModelHolder" instance=ExtResource("5_eack5")]
visible = false

[node name="Floor" type="CSGBox3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0481556)
material_override = ExtResource("5_dpdsy")
size = Vector3(5, 0.1, 5)

[node name="StaticBody3D" type="StaticBody3D" parent="Stage"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_fhqru")

[node name="SheenChair" parent="Stage" instance=ExtResource("6_npf2o")]
transform = Transform3D(0.362926, 0, 0.931818, 0, 1, 0, -0.931818, 0, 0.362926, -1.3125, 0, -0.511137)

[node name="BackWall" type="CSGCylinder3D" parent="Stage"]
transform = Transform3D(-0.371368, 0, -0.928486, 0, 1, 0, 0.928486, 0, -0.371368, 0, 1.16853, 0)
material_override = ExtResource("7_h7q6w")
flip_faces = true
radius = 2.601
height = 2.48736

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/BackWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/BackWall/StaticBody3D"]
shape = SubResource("CylinderShape3D_ce2dc")

[node name="Ceiling" type="CSGBox3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.36958, -0.0963112)
material_override = ExtResource("8_57npg")
size = Vector3(5, 0.1, 5)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ssqph")
camera_attributes = SubResource("CameraAttributesPractical_owjuv")

[connection signal="new_enviroment_from_chatgpt" from="CanvasLayer/BottomBar" to="Stage" method="_on_bottom_bar_new_enviroment_from_chatgpt"]
[connection signal="pressed" from="CanvasLayer/BottomBar/RecordButton" to="CanvasLayer/BottomBar" method="_on_record_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BottomBar/ExecuteButton" to="CanvasLayer/BottomBar" method="_on_execute_button_pressed"]
[connection signal="request_completed" from="CanvasLayer/BottomBar/HTTPRequest" to="CanvasLayer/BottomBar" method="_on_http_request_request_completed"]
[connection signal="request_completed" from="CanvasLayer/BottomBar/HTTPRequest2" to="CanvasLayer/BottomBar" method="_on_http_request_2_request_completed"]
